Tim Stafford Tattoos - Shop - Fixed mobile layout bugs

--- a/source/sass/blocks/_breadcrumb.sass
+++ b/source/sass/blocks/_breadcrumb.sass
@@ -10,6 +10,7 @@
     align-items: flex-start
     padding: 0 25px 20px
     +md
+      padding: 0 50px 20px
       align-items: center
       flex-direction: row
     +xl
