--- a/source/sass/blocks/_hero.sass
+++ b/source/sass/blocks/_hero.sass
@@ -7,11 +7,13 @@
     position: relative
     display: flex
     width: 100%
-    height: 300px
+    height: 100px
     max-width: $global-container-max-width
     margin: 0 auto
     justify-content: center
     align-items: center
+    +md
+      height: 200px
 
   &__chapter
     position: relative
@@ -21,6 +23,10 @@
 
     .tst-chapter__title:only-child
       margin-bottom: 0
+      font-size: 24px
+      letter-spacing: 2px
+      +md
+        font-size: 30px
 
   &:not(.tst-hero--main)
     .background-images__image
