--- a/source/sass/blocks/_section-products.sass
+++ b/source/sass/blocks/_section-products.sass
@@ -22,9 +22,12 @@
   &__list
     +md
       flex-direction: row
+      flex-wrap: wrap
+      align-items: flex-start
+      padding: 0 50px
     +xl
       max-width: $global-container-max-width
-      flex-wrap: wrap
+      padding: 0
 
   .tst-section-product
     position: relative
@@ -63,16 +66,16 @@
       position: relative
       display: flex
       width: calc(100vw - 40px)
-      min-width: 200px
       height: calc(100vw - 40px)
-      min-height: 200px
       max-width: 400px
       max-height: 400px
       flex: 1 0 auto
       user-select: none
       +md
         max-width: 100%
-        max-height: ($global-container-max-width - 150) / 4
+        max-height: calc((100vw - 250px) / 4)
+      +xl
+        max-height: 297.5px
 
     &__chapter
       margin-top: 20px
@@ -81,8 +84,13 @@
 
     &__chapter__title
       +type-weight-bold
-      margin-bottom: 10px
+      margin-bottom: 5px
       +md
+        font-size: 1.75vw
+        line-height: 1.5
+        max-width: 90%
+      +lg
+        font-size: 16px
         max-width: 75%
 
     &__chapter__price
