--- a/static/style.css
+++ b/static/style.css
@@ -344,6 +344,7 @@ a:hover {
 
 @media only screen and (min-width: 768px) {
   .tst-breadcrumb__container {
+    padding: 0 50px 20px;
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
@@ -1134,7 +1135,7 @@ textarea:focus {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 300px;
+  height: 100px;
   max-width: 1340px;
   margin: 0 auto;
   -webkit-box-pack: center;
@@ -1145,6 +1146,12 @@ textarea:focus {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .tst-hero__container {
+    height: 200px;
+  }
 }
 
 .tst-hero__chapter {
@@ -1159,6 +1166,14 @@ textarea:focus {
 
 .tst-hero__chapter .tst-chapter__title:only-child {
   margin-bottom: 0;
+  font-size: 24px;
+  letter-spacing: 2px;
+}
+
+@media only screen and (min-width: 768px) {
+  .tst-hero__chapter .tst-chapter__title:only-child {
+    font-size: 30px;
+  }
 }
 
 .tst-hero:not(.tst-hero--main) .background-images__image {
@@ -1865,15 +1880,21 @@ textarea:focus {
     -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 0 50px;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .tst-section-products__list {
     max-width: 1340px;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
+    padding: 0;
   }
 }
 
@@ -1948,10 +1969,8 @@ textarea:focus {
   display: flex;
   width: -webkit-calc(100vw - 40px);
   width: calc(100vw - 40px);
-  min-width: 200px;
   height: -webkit-calc(100vw - 40px);
   height: calc(100vw - 40px);
-  min-height: 200px;
   max-width: 400px;
   max-height: 400px;
   -webkit-box-flex: 1;
@@ -1967,6 +1986,13 @@ textarea:focus {
 @media only screen and (min-width: 768px) {
   .tst-section-products .tst-section-product__image {
     max-width: 100%;
+    max-height: -webkit-calc((100vw - 250px) / 4);
+    max-height: calc((100vw - 250px) / 4);
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .tst-section-products .tst-section-product__image {
     max-height: 297.5px;
   }
 }
@@ -1982,11 +2008,20 @@ textarea:focus {
 
 .tst-section-products .tst-section-product__chapter__title {
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 @media only screen and (min-width: 768px) {
   .tst-section-products .tst-section-product__chapter__title {
+    font-size: 1.75vw;
+    line-height: 1.5;
+    max-width: 90%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .tst-section-products .tst-section-product__chapter__title {
+    font-size: 16px;
     max-width: 75%;
   }
 }
